[gd_scene load_steps=2 format=2]

[ext_resource path="res://Code/Investigate.gd" type="Script" id=1]

[node name="Investigate" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="stuff" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 199.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Something is scribbled on here"
percent_visible = 0.0
lines_skipped = 0
max_lines_visible = -1

[node name="Investigate" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 107.0
margin_bottom = 63.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = true
align = 1

[connection signal="mouse_entered" from="Investigate" to="." method="_on_Investigate_mouse_entered"]

[connection signal="mouse_exited" from="Investigate" to="." method="_on_Investigate_mouse_exited"]

[connection signal="pressed" from="Investigate" to="." method="_on_Investigate_pressed"]


